src/styles.css
:root {
  --primary-color: #ecf2ff;
  --secondary-color: #e3dffd;
  --tertiary-color: #d6b7f8;
  --accent-color: #d1ae45;
  --shadow: 6px 4px 15px rgba(0, 0, 0, 0.1);
  --text-color: rgb(55, 52, 61);
}

h1 {
  font-family: "Poly", serif;
  font-weight: 900;
  font-style: normal;
  font-size: 90px;
  color: var(--text-color);
  margin: 20px auto;
}

h2,
h3,
h4,
h5,
h6 {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

h2 {
  font-size: 40px;
  font-weight: 400;
}

h3 {
  padding-left: 16px;
  margin-bottom: 20px;
  font-family: "Poly", serif;
  font-weight: 600;
  font-size: 40px;
  color: var(--text-color);
}

h4 {
  opacity: 0.75;
  font-weight: 300;
}

h6 {
  text-align: center;
  margin-bottom: 60px;
  font-style: italic;
}

p {
  padding-right: 40px;
}

img {
  border-radius: 10px;
  border: 1.8 solid var(--text-color);
}

.projects-container img {
  border-radius: 6px;
  transition: all 120ms ease-in-out;
}

.projects-container img:hover {
  filter: contrast(80%);
  transform: scale(1.018);
  cursor: pointer;
}

a {
  text-decoration: none;
  color: var(--text-color);
}

li {
  margin: 0 12px;
}

.li-home {
  padding-right: 15px;
}

.bg-blue {
  background-color: var(--primary-color);
}

.poppins {
  font-family: "Poppins", sans-serif;
}

.monospace {
  font-family: monospace;
}

.small-title {
  font-weight: 500;
  font-size: large;
  margin-bottom: 9px;
  margin-top: 27px;
  font-style: normal;
}
.hero {
  text-align: center;
  margin: 0 auto 60px auto;
  display: block;
  padding: 209px 100px;
  background-color: var(--primary-color);
}

.hero-button {
  margin-left: 40px;
  margin-right: 40px;
  transition: all 120ms ease-in-out;
  border: 1.8px solid var(--accent-color);
}

.hero-button:hover {
  text-decoration: none;
  color: var(--accent-color);
  padding: 23px 27px;
  border-radius: 6px;
  background: white;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
  border: 1.8px solid var(--accent-color);
  box-shadow: var(--shadow);
}

.contact-button:hover {
  text-decoration: none;
  color: var(--accent-color);
  padding: 22px 26px;
  border-radius: 6px;
  background: white;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
  border: 1.8px solid var(--accent-color);
  box-shadow: var(--shadow);
}

.project-button {
  margin-top: 80px;
  margin-left: 17px;
  transition: all 100ms ease-in-out;
}

.about-button:hover {
  text-decoration: none;
  color: var(--accent-color);
  padding: 23px 27px;
  border-radius: 6px;
  background: white;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
  border: 1.8px solid var(--accent-color);
  box-shadow: var(--shadow);
}

.button {
  text-decoration: none;
  color: white;
  padding: 23px 27px;
  border-radius: 6px;
  background: var(--accent-color);
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
  transition: all 120ms ease-in-out;
}

.info-inverse {
  padding-right: 15px;
  margin-bottom: 20px;
  text-align: right;
}

.project-button.info-inverse {
  margin-right: 35px;
}

.button-inverse {
  text-decoration: none;
  color: var(--accent-color);
  padding: 23px 27px;
  border-radius: 6px;
  background: white;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
  border: 1.8px solid var(--accent-color);
  transition: 100ms ease-in-out;
}

.button-inverse:hover {
  text-decoration: none;
  color: white;
  padding: 23px 27px;
  border-radius: 6px;
  background: var(--accent-color);
  box-shadow: var(--shadow);
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
}

.project-info {
  margin-left: 18px;
}

h1.about-section {
  font-size: 50px;
  margin-top: 8px;
}

h1.contact-section {
  font-size: 50px;
  margin-top: 30px;
  padding-left: 30px;
}

h1.project-section {
  font-size: 50px;
  margin-top: 75px;
  padding-left: 0px;
}

h5.about-section {
  font-style: italic;
}

p.about-section {
  margin-left: 0px;
}

.about-wrapper {
  padding-top: 120px;
}

.work-wrapper {
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 50px;
  padding-bottom: 0px;
}

.about-content {
  padding-right: 2px;
}

.projects-container {
  padding-top: 25px;
}

.about-button {
  margin: 100px;
}

.text-end {
  text-align: right;
}

.contact-box {
  padding: 35px 35px 30px 35px;
  margin: 0 25px;
  background-color: var(--primary-color);
  border-radius: 6px;
}

.contact-box h3 {
  margin: 0;
  margin-bottom: 12px;
  padding: 0;
  font-size: 35px;
}

.contact-box p {
  font-size: 16px;
}

.contact-box-text {
  padding: 0px 20px;
}

.contact-box-button {
  margin-top: 45px;
  margin-right: 50px;
}

footer {
  margin-top: 160px;
}

@media (min-width: 1250px) {
  h3 {
    margin-top: 30px;
  }
}

@media (min-width: 1200px) {
  .contact-box {
    margin: 0 150px;
  }
}

@media (max-width: 960px) {
  .project-button {
    margin-left: 18px;
  }
  .hero-button {
    margin-left: 25px;
    margin-right: 25px;
  }
  p {
    padding: 0 5px;
  }

  h3 {
    margin-top: 0;
  }

  .rachel {
    display: flex;
    margin-top: 70px;
  }

  .about-button {
    margin: 0 auto;
  }

  .about-wrapper {
    padding: 115px 12px;
  }

  .hero {
    padding-top: 100px;
  }
  li.nav-item {
    margin: 0px;
  }
  .hero {
    padding: 160px 20px;
  }

  .contact-box-button {
    margin-right: 20px;
  }

  footer {
    margin-top: 70px;
  }
}

@media (max-width: 750px) {
  .project-info {
    text-align: center;
    margin-left: 0;
  }
  .about-button {
    margin: 0px;
  }
  .rachel {
    margin-top: 70px;
  }

  li.nav-item {
    margin: 0px;
  }

  hero-button {
    margin: 0 12px;
    font-size: 10px;
  }
}

@media (max-width: 576px) {
  h1 {
    font-size: 65px;
  }

  h3 {
    font-size: 35px;
  }

  h4 {
    line-height: 1.5;
  }

  h6 {
    margin-bottom: 30px;
  }

  h1.project-section {
    font-size: 35px;
    margin: 15px auto 18px auto;
    padding-left: 0px;
  }

  h1.contact-section {
    padding: 10px 5px;
    padding-bottom: 0px;
  }

  .projects-container {
    padding-top: 10px;
    margin: 0px;
  }

  li.nav-item {
    margin: 0px;
  }

  .rachel {
    margin-top: 70px;
  }

  .hero {
    padding: 120px 30px 100px 30px;
  }
  .hero-button {
    margin: 0 8px;
    font-size: 13px;
  }

  .project-button {
    margin-bottom: 22px;
    margin-left: 0px;
  }

  .about-button {
    margin: 0px;
  }

  p {
    padding: 0 0px;
    margin-left: 0px;
  }
  .project-info {
    margin-left: 0;
    margin-right: 0;
  }

  .about-wrapper {
    padding: 90px 25px 90px 25px;
  }
  .contact-page.links-box {
    display: none;
  }

  footer .coded-by {
    margin-right: 20px;
    margin-left: 20px;
  }

  .links-box .mail {
    font-size: 17px;
  }
}

